# MIPT-networked

./: .gitmodules  CMakeLists.txt
w1/: client.cpp  protocol.h  server.cpp  socket_tools.cpp  socket_tools.h
w10/: main.cpp  protocol.cpp  protocol.h  quantisation.h  server.cpp  w10.sln  w10.vcxproj
w2/: client.cpp  lobby.cpp  server.cpp
w3/: client.cpp  server.cpp
w4/: CMakeLists.txt  bitstream.h  entity.h  main.cpp  protocol.cpp  protocol.h  server.cpp  w4.sln  w4.vcxproj
w5/: CMakeLists.txt  app.cpp  entity.cpp  entity.h  main.cpp  mathUtils.h  protocol.cpp  protocol.h  server  server.cpp  w5.sln  w5.vcxproj
w7/: CMakeLists.txt  app.cpp  app.h  entity.cpp  entity.h  main.cpp  mathUtils.h  protocol.cpp  quantisation.h  w5.vcxproj  w7.sln
w7/test/: main  test.cpp
